--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,11 +1,72 @@
+.navbar {
+
+  @apply  
+  px-6 
+  py-8 
+  bg-white 
+  z-50 
+  relative 
+  flex 
+  justify-between 
+  md:px-10 
+  md:py-16 
+  lg:px-[82px] 
+  xl:px-[164px] 
+  2xl:px-[256px]
+
+}
+
+
+.menu-active {
+
+  @apply 
+  transition-all 
+  duration-300 
+  ease-in-out m-0  
+  absolute 
+  left-0   
+  w-screen  
+  h-screen 
+  top-[85px] 
+  bg-black/50  
+  text-white 
+  uppercase  
+  md:hidden 
+  2xl:hidden
+
+}
+
+.menu-closed {
+
+  @apply 
+  transition-all 
+  duration-500 
+  ease-in-out 
+  m-0 
+  absolute    
+  w-screen 
+  h-screen 
+  top-[85px] 
+  left-[-5000px] 
+  bg-black/50  
+  text-white 
+  uppercase
+    
+}
+
 .link-bar {
+
   height: 3px;
   width: 0px;
   background-color: #ffad9b;
   transition: width 0.2s ease-in-out;
+
 }
+
 .nav-link:hover {
+
   .link-bar {
     width: 100%;
   }
+
 }
